--- a/index.html
+++ b/index.html
@@ -243,20 +243,20 @@
         <!--hostings_popular-->
         <div class="hostings_popular">
           <div class="hostings_popular_head">
-            <h2 class="">Les plus populaires</h2>
+            <h2>Les plus populaires</h2>
             <i class="fas fa-chart-line fa-2x"></i>
           </div>
           <div class="hostings_popular_figures">
             <a>
-              <figure class="hosting_popular_figure">
+              <figure class="hostings_popular_figure">
                 <img
                   src="images/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                   alt="chambre
             d'hôtel"
                 />
-                <figcaption class="hosting_figcaption">
+                <figcaption class="hostings_figcaption">
                   <h3>Hôtel le soleil du matin</h3>
-                  <p>Nuit à partir de <span>128 €</span></p>
+                  <p>Nuit à partir de <strong>128 €</strong></p>
                   <div class="stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -269,17 +269,17 @@
             </a>
 
             <a>
-              <figure class="hosting_popular_figure">
+              <figure class="hostings_popular_figure">
                 <img
                   src="images/hebergements/2_large/aw-creative-VGs8z60yT2c-unsplash.jpg"
                   alt="chambre
             d'hôtel"
                 />
-                <figcaption class="hosting_figcaption">
+                <figcaption class="hostings_figcaption">
                   <h3 class="host_name">
                     Au coeur de l'eau<br />Chambres d'hôtes
                   </h3>
-                  <p>Nuit à partir de <span>71 €</span></p>
+                  <p>Nuit à partir de <strong>71 €</strong></p>
                   <div class="stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -292,15 +292,15 @@
             </a>
 
             <a>
-              <figure class="hosting_popular_figure">
+              <figure class="hostings_popular_figure">
                 <img
                   src="images/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
                   alt="chambre
             d'hôtel"
                 />
-                <figcaption class="hosting_figcaption">
+                <figcaption class="hostings_figcaption">
                   <h3>Hôtel tout bleu et blanc</h3>
-                  <p>Nuit à partir de <span>68 €</span></p>
+                  <p>Nuit à partir de <strong>68 €</strong></p>
                   <div class="stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -326,9 +326,7 @@
                 src="images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                 alt="chambre d'hôtel"
               />
-              <figcaption>
-                <h3>Vieux port</h3>
-              </figcaption>
+              <h3 class="activities_title">Vieux port</h3>
             </figure>
           </a>
 
@@ -340,9 +338,7 @@
                   src="images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
                   alt="chambre d'hôtel"
                 />
-                <figcaption>
-                  <h3>Fort de Pomègues</h3>
-                </figcaption>
+                <h3 class="activities_title">Fort de Pomègues</h3>
               </figure>
             </a>
 
@@ -352,9 +348,7 @@
                   src="images/activites/2_large/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
                   alt="chambre d'hôtel"
                 />
-                <figcaption>
-                  <h3>Îles du Frioul</h3>
-                </figcaption>
+                <h3 class="activities_title">Îles du Frioul</h3>
               </figure>
             </a>
           </div>
@@ -366,24 +360,21 @@
                 src="images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
                 alt="chambre d'hôtel"
               />
-              <figcaption>
-                <h3>Parc National des Calanques</h3>
-              </figcaption>
+              <h3 class="activities_title">Parc National des Calanques</h3>
             </figure>
           </a>
 
           <!--activities_figures_cards-->
           <div class="activities_figures_cards">
-            <a href="#"></a>
-            <figure class="activities_figures_card">
-              <img
-                src="images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg"
-                alt="chambre d'hôtel"
-              />
-              <figcaption>
-                <h3>Notre-dame-de-la-garde</h3>
-              </figcaption>
-            </figure>
+            <a href="#">
+              <figure class="activities_figures_card">
+                <img
+                  src="images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                  alt="chambre d'hôtel"
+                />
+                <h3 class="activities_title">Notre-dame-de-la-garde</h3>
+              </figure>
+            </a>
 
             <a href="#">
               <figure class="activities_figures_card">
@@ -391,43 +382,42 @@
                   src="images/activites/2_large/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
                   alt="chambre d'hôtel"
                 />
-                <figcaption>
-                  <h3>Parc Longchamp</h3>
-                </figcaption>
+                <h3 class="activities_title">Parc Longchamp</h3>
               </figure>
             </a>
           </div>
         </div>
       </section>
+
+      <!--footer-->
+      <footer>
+        <div class="footer_items">
+          <div class="footer_item">
+            <h4>A propos</h4>
+            <ul>
+              <li><a href="#">Fonctionnement du site</a></li>
+              <li><a href="#">Conditions générales de vente</a></li>
+              <li><a href="#">Données et confidentialité</a></li>
+            </ul>
+          </div>
+
+          <div class="footer_item">
+            <h4>Nos hébergements</h4>
+            <ul>
+              <li><a href="#">Charte qualité</a></li>
+              <li><a href="#">Soumettre votre hôtel</a></li>
+            </ul>
+          </div>
+
+          <div class="footer_item">
+            <h4>Assistance</h4>
+            <ul>
+              <li><a href="#">Centre d'aide</a></li>
+              <li><a href="#">Nous contacter</a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
     </div>
-    <!--footer-->
-    <footer>
-      <div class="footer_items">
-        <div class="footer_item">
-          <h3>A propos</h3>
-          <ul>
-            <li><a href="#">Fonctionnement du site</a></li>
-            <li><a href="#">Conditions générales de vente</a></li>
-            <li><a href="#">Données et confidentialité</a></li>
-          </ul>
-        </div>
-
-        <div class="footer_item">
-          <h3>Nos hébergements</h3>
-          <ul>
-            <li><a href="#">Charte qualité</a></li>
-            <li><a href="#">Soumettre votre hôtel</a></li>
-          </ul>
-        </div>
-
-        <div class="footer_item">
-          <h3>Assistance</h3>
-          <ul>
-            <li><a href="#">Centre d'aide</a></li>
-            <li><a href="#">Nous contacter</a></li>
-          </ul>
-        </div>
-      </div>
-    </footer>
   </body>
 </html>
