--- a/index.html
+++ b/index.html
@@ -109,20 +109,20 @@
 
       <!--hostings-->
       <section class="hostings">
-        <!--hostings_results-->
-        <div class="hostings_results">
-          <h2 class="hostings_results_title">Hébergements à Marseille</h2>
-          <div class="hostings_results_figures">
+        <!--main hostings-->
+        <div class="main_hostings">
+          <h2 class="main_hostings_title">Hébergements à Marseille</h2>
+          <div class="main_hostings_figures">
             <a href="#"
-              ><figure class="hostings_results_figure">
+              ><figure class="main_hostings_figure">
                 <img
                   src="images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                   alt="chambre
             d'hôtel"
                 />
-                <figcaption class="hostings_figcaption">
+                <figcaption class="main_hostings_figcaption">
                   <h3>Auberge la Cannebière</h3>
-                  <p class="host_cost">Nuit à partir de <span>25 €</span></p>
+                  <p>Nuit à partir de <strong>25 €</strong></p>
                   <div class="stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -135,13 +135,13 @@
             </a>
 
             <a href="#"
-              ><figure class="hostings_results_figure">
+              ><figure class="main_hostings_figure">
                 <img
                   src="images/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
                   alt="chambre
             d'hôtel"
                 />
-                <figcaption class="hostings_figcaption">
+                <figcaption class="main_hostings_figcaption">
                   <h3>hôtel du port</h3>
                   <p>Nuit à partir de <strong>52 €</strong></p>
                   <div class="stars">
@@ -156,13 +156,13 @@
             </a>
 
             <a href="#">
-              <figure class="hostings_results_figure">
+              <figure class="main_hostings_figure">
                 <img
                   src="images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg"
                   alt="chambre
             d'hôtel"
                 />
-                <figcaption class="hostings_figcaption">
+                <figcaption class="main_hostings_figcaption">
                   <h3>Hôtel les mouettes</h3>
                   <p>Nuit à partir de <strong>76 €</strong></p>
                   <div class="stars">
@@ -176,13 +176,13 @@
             ></a>
 
             <a href="#">
-              <figure class="hostings_results_figure">
+              <figure class="main_hostings_figure">
                 <img
                   src="images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                   alt="chambre
             d'hôtel"
                 />
-                <figcaption class="hostings_figcaption">
+                <figcaption class="main_hostings_figcaption">
                   <h3>Hôtel de la mer</h3>
                   <p>Nuit à partir de <strong>46 €</strong></p>
                   <div class="stars">
@@ -197,13 +197,13 @@
             </a>
 
             <a href="#">
-              <figure class="hostings_results_figure">
+              <figure class="main_hostings_figure">
                 <img
                   src="images/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
                   alt="chambre
             d'hôtel"
                 />
-                <figcaption class="hostings_figcaption">
+                <figcaption class="main_hostings_figcaption">
                   <h3>Auberge le panier</h3>
                   <p>Nuit à partir de <strong>23 €</strong></p>
                   <div class="stars">
@@ -218,13 +218,13 @@
             </a>
 
             <a href="#">
-              <figure class="hostings_results_figure">
+              <figure class="main_hostings_figure">
                 <img
                   src="images/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
                   alt="chambre
             d'hôtel"
                 />
-                <figcaption class="hostings_figcaption">
+                <figcaption class="main_hostings_figcaption">
                   <h3>Hôtel chez Amina</h3>
                   <p>Nuit à partir de <strong>96 €</strong></p>
                   <div class="stars">
@@ -240,21 +240,21 @@
           <a href="#"><h3 class="display_more">Afficher plus</h3> </a>
         </div>
 
-        <!--hostings_popular-->
-        <div class="hostings_popular">
-          <div class="hostings_popular_head">
+        <!--popular_hostings-->
+        <div class="popular_hostings">
+          <div class="popular_hostings_head">
             <h2>Les plus populaires</h2>
             <i class="fas fa-chart-line fa-2x"></i>
           </div>
-          <div class="hostings_popular_figures">
+          <div class="popular_hostings_figures">
             <a>
-              <figure class="hostings_popular_figure">
+              <figure class="popular_hostings_figure">
                 <img
                   src="images/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                   alt="chambre
             d'hôtel"
                 />
-                <figcaption class="hostings_figcaption">
+                <figcaption class="popular_hostings_figcaption">
                   <h3>Hôtel le soleil du matin</h3>
                   <p>Nuit à partir de <strong>128 €</strong></p>
                   <div class="stars">
@@ -269,16 +269,14 @@
             </a>
 
             <a>
-              <figure class="hostings_popular_figure">
+              <figure class="popular_hostings_figure">
                 <img
                   src="images/hebergements/2_large/aw-creative-VGs8z60yT2c-unsplash.jpg"
                   alt="chambre
             d'hôtel"
                 />
-                <figcaption class="hostings_figcaption">
-                  <h3 class="host_name">
-                    Au coeur de l'eau<br />Chambres d'hôtes
-                  </h3>
+                <figcaption class="popular_hostings_figcaption">
+                  <h3>Au coeur de l'eau<br />Chambres d'hôtes</h3>
                   <p>Nuit à partir de <strong>71 €</strong></p>
                   <div class="stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -292,13 +290,13 @@
             </a>
 
             <a>
-              <figure class="hostings_popular_figure">
+              <figure class="popular_hostings_figure">
                 <img
                   src="images/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
                   alt="chambre
             d'hôtel"
                 />
-                <figcaption class="hostings_figcaption">
+                <figcaption class="popular_hostings_figcaption">
                   <h3>Hôtel tout bleu et blanc</h3>
                   <p>Nuit à partir de <strong>68 €</strong></p>
                   <div class="stars">
