--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             type="text"
             name="search"
             id="search_input"
-            placeholder="ville, Pays"
+            placeholder="Marseille, France"
           />
           <input class="search_form_submit" type="submit" value="Rechercher" />
           <button class="search_form_submit_responsive" type="submit">
@@ -276,7 +276,7 @@
             d'hôtel"
                 />
                 <figcaption class="popular_hostings_figcaption">
-                  <h3>Au coeur de l'eau<br />Chambres d'hôtes</h3>
+                  <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                   <p>Nuit à partir de <strong>71 €</strong></p>
                   <div class="stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
