ajout esponsive tablets 992px

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container">
       <header>
         <!--logo-->
-        <img src="images/logo/Reservia.svg" />
+        <img src="images/logo/Reservia.svg" class="logo" />
         <!--menu-->
         <ul class="menu">
           <li class="menu_link"><a href="#hostings">Hébergements</a></li>
@@ -60,42 +60,44 @@
 
         <!--filters-->
         <div class="filters">
-          <h2>Filtres</h2>
-          <a href="#">
-            <div class="filters_item">
-              <label class="filters_item_icon">
-                <i class="fas fa-money-bill-wave"></i>
-              </label>
-              <h3 class="filters_item_title">Économique</h3>
-            </div>
-          </a>
+          <h2 class="filters_title">Filtres</h2>
+          <div class="filters_items">
+            <a href="#">
+              <div class="filters_item">
+                <label class="filters_item_icon">
+                  <i class="fas fa-money-bill-wave"></i>
+                </label>
+                <h3>Économique</h3>
+              </div>
+            </a>
 
-          <a href="#">
-            <div class="filters_item">
-              <label class="filters_item_icon">
-                <i class="fas fa-child"></i>
-              </label>
-              <h3 class="filters_item_title">Familial</h3>
-            </div>
-          </a>
+            <a href="#">
+              <div class="filters_item">
+                <label class="filters_item_icon">
+                  <i class="fas fa-child"></i>
+                </label>
+                <h3>Familial</h3>
+              </div>
+            </a>
 
-          <a href="#">
-            <div class="filters_item">
-              <label class="filters_item_icon">
-                <i class="fas fa-heart"></i>
-              </label>
-              <h3 class="filters_item_title">Romantique</h3>
-            </div>
-          </a>
+            <a href="#">
+              <div class="filters_item">
+                <label class="filters_item_icon">
+                  <i class="fas fa-heart"></i>
+                </label>
+                <h3>Romantique</h3>
+              </div>
+            </a>
 
-          <a href="#">
-            <div class="filters_item">
-              <label class="filters_item_icon">
-                <i class="fas fa-dog"></i>
-              </label>
-              <h3 class="filters_item_title">Animaux autorisés</h3>
-            </div>
-          </a>
+            <a href="#">
+              <div class="filters_item">
+                <label class="filters_item_icon">
+                  <i class="fas fa-dog"></i>
+                </label>
+                <h3>Animaux autorisés</h3>
+              </div>
+            </a>
+          </div>
         </div>
 
         <!--infos-->
@@ -247,7 +249,7 @@
             <i class="fas fa-chart-line fa-2x"></i>
           </div>
           <div class="popular_hostings_figures">
-            <a>
+            <a href="#">
               <figure class="popular_hostings_figure">
                 <img
                   src="images/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
@@ -268,7 +270,7 @@
               </figure>
             </a>
 
-            <a>
+            <a href="#">
               <figure class="popular_hostings_figure">
                 <img
                   src="images/hebergements/2_large/aw-creative-VGs8z60yT2c-unsplash.jpg"
@@ -289,7 +291,7 @@
               </figure>
             </a>
 
-            <a>
+            <a href="#">
               <figure class="popular_hostings_figure">
                 <img
                   src="images/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
