ajout des regles responsives pour la selection des images

--- a/index.html
+++ b/index.html
@@ -118,9 +118,19 @@
             <a href="#"
               ><figure class="main_hostings_figure">
                 <img
-                  src="images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                  alt="chambre
-            d'hôtel"
+                  srcset="
+                    ./images/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg 240w,
+                    ./images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg 200w,
+                    ./images/hebergements/3_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg  130w
+                  "
+                  sizes="
+                    (min-width: 1024px) 240px,
+                    (max-width: 768px) 200px,
+                    (max-width: 576px) 130px,
+                    240px
+                  "
+                  src="marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                  alt="chambre d'hôtel"
                 />
                 <figcaption class="main_hostings_figcaption">
                   <h3>Auberge la Cannebière</h3>
@@ -139,9 +149,19 @@
             <a href="#"
               ><figure class="main_hostings_figure">
                 <img
-                  src="images/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
-                  alt="chambre
-            d'hôtel"
+                  srcset="
+                    ./images/hebergements/1_xlarge/fred-kleber-gTbaxaVLvsg-unsplash.jpg 240w,
+                    ./images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg 200w,
+                    ./images/hebergements/3_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg  130w
+                  "
+                  sizes="
+                    (min-width: 1024px) 240px,
+                    (max-width: 768px) 200px,
+                    (max-width: 576px) 130px,
+                    240px
+                  "
+                  src="fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                  alt="chambre d'hôtel"
                 />
                 <figcaption class="main_hostings_figcaption">
                   <h3>hôtel du port</h3>
@@ -160,9 +180,19 @@
             <a href="#">
               <figure class="main_hostings_figure">
                 <img
-                  src="images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg"
-                  alt="chambre
-            d'hôtel"
+                  srcset="
+                    ./images/hebergements/1_xlarge/reisetopia-B8WIgxA_PFU-unsplash.jpg 240w,
+                    ./images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg 200w,
+                    ./images/hebergements/3_small/reisetopia-B8WIgxA_PFU-unsplash.jpg  130w
+                  "
+                  sizes="
+                    (min-width: 1024px) 240px,
+                    (max-width: 768px) 200px,
+                    (max-width: 576px) 130px,
+                    240px
+                  "
+                  src="reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                  alt="chambre d'hôtel"
                 />
                 <figcaption class="main_hostings_figcaption">
                   <h3>Hôtel les mouettes</h3>
@@ -180,9 +210,19 @@
             <a href="#">
               <figure class="main_hostings_figure">
                 <img
-                  src="images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
-                  alt="chambre
-            d'hôtel"
+                  srcset="
+                    ./images/hebergements/1_xlarge/annie-spratt-Eg1qcIitAuA-unsplash.jpg 240w,
+                    ./images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg 200w,
+                    ./images/hebergements/3_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg  130w
+                  "
+                  sizes="
+                    (min-width: 1024px) 240px,
+                    (max-width: 768px) 200px,
+                    (max-width: 576px) 130px,
+                    240px
+                  "
+                  src="annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                  alt="chambre d'hôtel"
                 />
                 <figcaption class="main_hostings_figcaption">
                   <h3>Hôtel de la mer</h3>
@@ -201,9 +241,19 @@
             <a href="#">
               <figure class="main_hostings_figure">
                 <img
-                  src="images/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
-                  alt="chambre
-            d'hôtel"
+                  srcset="
+                    ./images/hebergements/1_xlarge/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 240w,
+                    ./images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 200w,
+                    ./images/hebergements/3_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg  130w
+                  "
+                  sizes="
+                    (min-width: 1024px) 240px,
+                    (max-width: 768px) 200px,
+                    (max-width: 576px) 130px,
+                    240px
+                  "
+                  src="nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                  alt="chambre d'hôtel"
                 />
                 <figcaption class="main_hostings_figcaption">
                   <h3>Auberge le panier</h3>
@@ -222,9 +272,19 @@
             <a href="#">
               <figure class="main_hostings_figure">
                 <img
-                  src="images/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
-                  alt="chambre
-            d'hôtel"
+                  srcset="
+                    ./images/hebergements/1_xlarge/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 240w,
+                    ./images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 200w,
+                    ./images/hebergements/3_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg  130w
+                  "
+                  sizes="
+                    (min-width: 1024px) 240px,
+                    (max-width: 768px) 200px,
+                    (max-width: 576px) 130px,
+                    240px
+                  "
+                  src="febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                  alt="chambre d'hôtel"
                 />
                 <figcaption class="main_hostings_figcaption">
                   <h3>Hôtel chez Amina</h3>
@@ -252,9 +312,19 @@
             <a href="#">
               <figure class="popular_hostings_figure">
                 <img
-                  src="images/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                  alt="chambre
-            d'hôtel"
+                  srcset="
+                    ./images/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 130,
+                    ./images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 200w,
+                    ./images/hebergements/3_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg  120w
+                  "
+                  sizes="
+                    (min-width: 1024px) 240px,
+                    (max-width: 768px) 200px,
+                    (max-width: 576px) 130px,
+                    130px
+                  "
+                  src="emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                  alt="chambre d'hôtel"
                 />
                 <figcaption class="popular_hostings_figcaption">
                   <h3>Hôtel le soleil du matin</h3>
@@ -273,9 +343,19 @@
             <a href="#">
               <figure class="popular_hostings_figure">
                 <img
-                  src="images/hebergements/2_large/aw-creative-VGs8z60yT2c-unsplash.jpg"
-                  alt="chambre
-            d'hôtel"
+                  srcset="
+                    ./images/activites/1_xlarge/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 240w,
+                    ./images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 200w,
+                    ./images/activites/3_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg  130w
+                  "
+                  sizes="
+                    (min-width: 1024px) 240px,
+                    (max-width: 768px) 200px,
+                    (max-width: 576px) 130px,
+                    240px
+                  "
+                  src="reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                  alt="chambre d'hôtel"
                 />
                 <figcaption class="popular_hostings_figcaption">
                   <h3>Au coeur de l'eau Chambres d'hôtes</h3>
@@ -294,9 +374,19 @@
             <a href="#">
               <figure class="popular_hostings_figure">
                 <img
-                  src="images/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-                  alt="chambre
-            d'hôtel"
+                  srcset="
+                    ./images/hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg 240w,
+                    ./images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg 200w,
+                    ./images/hebergements/3_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg  130w
+                  "
+                  sizes="
+                    (min-width: 1024px) 240px,
+                    (max-width: 768px) 200px,
+                    (max-width: 576px) 130px,
+                    130px
+                  "
+                  src="febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                  alt="chambre d'hôtel"
                 />
                 <figcaption class="popular_hostings_figcaption">
                   <h3>Hôtel tout bleu et blanc</h3>
@@ -323,7 +413,18 @@
           <a href="#">
             <figure class="activities_figure">
               <img
-                src="images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                srcset="
+                  ./images/activites/1_xlarge/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 240w,
+                  ./images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 200w,
+                  ./images/activites/3_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg  130w
+                "
+                sizes="
+                    (min-width: 1024px) 310px,
+                    (max-width: 768px) 160px,
+                    (max-width: 576px) 340px,
+                    310px
+                  "
+                src="reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                 alt="chambre d'hôtel"
               />
               <h3 class="activities_title">Vieux port</h3>
@@ -335,7 +436,18 @@
             <a href="#">
               <figure class="activities_figures_card">
                 <img
-                  src="images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                  srcset="
+                    ./images/activites/1_xlarge/ 240w,
+                    ./images/activites/3_medium/ 200w,
+                    ./images/activites/3_small/  130w
+                  "
+                  sizes="
+                    (min-width: 1024px) 240px,
+                    (max-width: 768px) 200px,
+                    (max-width: 576px) 130px,
+                    310px
+                  "
+                  src=""
                   alt="chambre d'hôtel"
                 />
                 <h3 class="activities_title">Fort de Pomègues</h3>
@@ -345,7 +457,18 @@
             <a href="#">
               <figure class="activities_figures_card">
                 <img
-                  src="images/activites/2_large/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                  srcset="
+                    ./images/hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg 240w,
+                    ./images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg 200w,
+                    ./images/hebergements/3_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg  130w
+                  "
+                  sizes="
+                    (min-width: 1024px) 240px,
+                    (max-width: 768px) 200px,
+                    (max-width: 576px) 130px,
+                    310px
+                  "
+                  src="febrian-zakaria-sjvU0THccQA-unsplash.jpg"
                   alt="chambre d'hôtel"
                 />
                 <h3 class="activities_title">Îles du Frioul</h3>
@@ -357,7 +480,18 @@
           <a href="#">
             <figure class="activities_figure">
               <img
-                src="images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                srcset="
+                  ./images/activites/1_xlarge/ 240w,
+                  ./images/activites/3_medium/ 200w,
+                  ./images/activites/3_small/  130w
+                "
+                sizes="
+                    (min-width: 1024px) 240px,
+                    (max-width: 768px) 200px,
+                    (max-width: 576px) 130px,
+                    310px
+                  "
+                src=""
                 alt="chambre d'hôtel"
               />
               <h3 class="activities_title">Parc National des Calanques</h3>
