--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--meta -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width" , initial-scale="1.0" />
+    <meta name="viewport" content="width=device-width" initial-scale="1.0" />
     <meta
       name="description"
       content="Reservia est une entreprise qui vous aide à trouver des hébergements et des activités pendant vos vacances"
@@ -26,7 +26,11 @@
     <div class="container">
       <header>
         <!--logo-->
-        <img src="images/logo/Reservia.svg" class="logo" />
+        <img
+          src="images/logo/Reservia.svg"
+          class="logo"
+          alt="logo agence de voyage"
+        />
         <!--menu-->
         <ul class="menu">
           <li class="menu_link"><a href="#hostings">Hébergements</a></li>
@@ -41,10 +45,10 @@
         <p>En plein centre ville ou en pleine nature</p>
 
         <!--search_form-->
-        <form class="search_form" action="" method="">
-          <label class="search_form_icon">
+        <form class="search_form" action="#" method="POST">
+          <div class="search_form_icon">
             <i class="fa fa-map-marker" aria-hidden="true"></i>
-          </label>
+          </div>
           <input
             class="search_form_text_"
             type="text"
@@ -64,36 +68,36 @@
           <div class="filters_items">
             <a href="#">
               <div class="filters_item">
-                <label class="filters_item_icon">
+                <div class="filters_item_icon">
                   <i class="fas fa-money-bill-wave"></i>
-                </label>
+                </div>
                 <h3>Économique</h3>
               </div>
             </a>
 
             <a href="#">
               <div class="filters_item">
-                <label class="filters_item_icon">
+                <div class="filters_item_icon">
                   <i class="fas fa-child"></i>
-                </label>
+                </div>
                 <h3>Familial</h3>
               </div>
             </a>
 
             <a href="#">
               <div class="filters_item">
-                <label class="filters_item_icon">
+                <div class="filters_item_icon">
                   <i class="fas fa-heart"></i>
-                </label>
+                </div>
                 <h3>Romantique</h3>
               </div>
             </a>
 
             <a href="#">
               <div class="filters_item">
-                <label class="filters_item_icon">
+                <div class="filters_item_icon">
                   <i class="fas fa-dog"></i>
-                </label>
+                </div>
                 <h3>Animaux autorisés</h3>
               </div>
             </a>
@@ -118,9 +122,19 @@
             <a href="#"
               ><figure class="main_hostings_figure">
                 <img
-                  src="images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                  alt="chambre
-            d'hôtel"
+                  srcset="
+                    images/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg 240w,
+                    images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg  200w,
+                    images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg 200w,
+                    images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg  120w
+                  "
+                  sizes="(min-width: 1024px) 240px,
+                          (max-width: 1024px) 200px,
+                          (max-width: 768px) 200px,
+                          (max-width: 576px) 120px,
+                              240px"
+                  src="marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                  alt="chambre d'hôtel à marseille"
                 />
                 <figcaption class="main_hostings_figcaption">
                   <h3>Auberge la Cannebière</h3>
@@ -244,7 +258,7 @@
                               240px"
                   src="nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
                   alt="chambre d'hôtel à marseille"
-                />" />
+                />
                 <figcaption class="main_hostings_figcaption">
                   <h3>Auberge le panier</h3>
                   <p>Nuit à partir de <strong>23 €</strong></p>
