--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--meta -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width" initial-scale="1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
       content="Reservia est une entreprise qui vous aide à trouver des hébergements et des activités pendant vos vacances"
@@ -33,8 +33,10 @@
         />
         <!--menu-->
         <ul class="menu">
-          <li class="menu_link"><a href="#hostings">Hébergements</a></li>
-          <li class="menu_link"><a href="#activities">Activités</a></li>
+          <div class="menu_responsive">
+            <li class="menu_link"><a href="#hostings">Hébergements</a></li>
+            <li class="menu_link"><a href="#activities">Activités</a></li>
+          </div>
           <li class="menu_login"><a href="#">S'inscrire</a></li>
         </ul>
       </header>
@@ -45,7 +47,11 @@
         <p>En plein centre ville ou en pleine nature</p>
 
         <!--search_form-->
-        <form class="search_form" action="#" method="POST">
+        <form
+          class="search_form"
+          action="https://rachad-alabi-adekambi.github.io/RachadAlabiAdekambi_2_09112020/"
+          method="POST"
+        >
           <div class="search_form_icon">
             <i class="fa fa-map-marker" aria-hidden="true"></i>
           </div>
@@ -123,10 +129,10 @@
               ><figure class="main_hostings_figure">
                 <img
                   srcset="
-                    images/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg 240w,
-                    images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg  200w,
-                    images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg 200w,
-                    images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg  120w
+                    images/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg 5993w,
+                    images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg  2997w,
+                    images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg 1499w,
+                    images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg   750w
                   "
                   sizes="(min-width: 1024px) 240px,
                           (max-width: 1024px) 200px,
@@ -154,10 +160,10 @@
               ><figure class="main_hostings_figure">
                 <img
                   srcset="
-                    images/hebergements/1_xlarge/fred-kleber-gTbaxaVLvsg-unsplash.jpg 240w,
-                    images/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg  200w,
-                    images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg 200w,
-                    images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg  120w
+                    images/hebergements/1_xlarge/fred-kleber-gTbaxaVLvsg-unsplash.jpg 5472w,
+                    images/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg  2736w,
+                    images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg 1368w,
+                    images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg   684w
                   "
                   sizes="(min-width: 1024px) 240px,
                           (max-width: 1024px) 200px,
@@ -185,10 +191,10 @@
               <figure class="main_hostings_figure">
                 <img
                   srcset="
-                    images/hebergements/1_xlarge/reisetopia-B8WIgxA_PFU-unsplash.jpg 240w,
-                    images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg  200w,
-                    images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg 200w,
-                    images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg  120w
+                    images/hebergements/1_xlarge/reisetopia-B8WIgxA_PFU-unsplash.jpg 6000w,
+                    images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg  3000w,
+                    images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg 1500w,
+                    images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg   750w
                   "
                   sizes="(min-width: 1024px) 240px,
                           (max-width: 1024px) 200px,
@@ -215,10 +221,10 @@
               <figure class="main_hostings_figure">
                 <img
                   srcset="
-                    images/hebergements/1_xlarge/annie-spratt-Eg1qcIitAuA-unsplash.jpg 240w,
-                    images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg  200w,
-                    images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg 200w,
-                    images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg  120w
+                    images/hebergements/1_xlarge/annie-spratt-Eg1qcIitAuA-unsplash.jpg 4000w,
+                    images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg  2000w,
+                    images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg  934w,
+                    images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg   500w
                   "
                   sizes="(min-width: 1024px) 240px,
                           (max-width: 1024px) 200px,
@@ -246,10 +252,10 @@
               <figure class="main_hostings_figure">
                 <img
                   srcset="
-                    images/hebergements/1_xlarge/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 240w,
-                    images/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg  200w,
-                    images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 200w,
-                    images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg  120w
+                    images/hebergements/1_xlarge/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 5212w,
+                    images/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg  2606w,
+                    images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg  733w,
+                    images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg   652w
                   "
                   sizes="(min-width: 1024px) 240px,
                           (max-width: 1024px) 200px,
@@ -277,10 +283,10 @@
               <figure class="main_hostings_figure">
                 <img
                   srcset="
-                    images/hebergements/1_xlarge/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 240w,
-                    images/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg  200w,
-                    images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 200w,
-                    images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg  120w
+                    images/hebergements/1_xlarge/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 4000w,
+                    images/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg  1944w,
+                    images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg  972w,
+                    images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg   486w
                   "
                   sizes="(min-width: 1024px) 240px,
                           (max-width: 1024px) 200px,
@@ -317,16 +323,16 @@
               <figure class="popular_hostings_figure">
                 <img
                   srcset="
-                    images/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 160w,
-                    images/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg  160w,
-                    images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 160w,
-                    images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg  130w
+                    images/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 4249w,
+                    images/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg  2125w,
+                    images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 1063w,
+                    images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg   532w
                   "
-                  sizes="(min-width: 1024px) 160px,
+                  sizes="(min-width: 1024px) 130px,
                           (max-width: 1024px) 160px,
-                          (max-width: 768px) 160px,
+                          (max-width: 768px) 130px,
                           (max-width: 576px) 130px,
-                            160px"
+                            130px"
                   src="emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                   alt="chambre d'hôtel à marseille"
                 />
@@ -349,16 +355,16 @@
               <figure class="popular_hostings_figure">
                 <img
                   srcset="
-                    images/hebergements/1_xlarge/aw-creative-VGs8z60yT2c-unsplash.jpg 160w,
-                    images/hebergements/2_large/aw-creative-VGs8z60yT2c-unsplash.jpg  160w,
-                    images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg 160w,
-                    images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg  130w
+                    images/hebergements/1_xlarge/aw-creative-VGs8z60yT2c-unsplash.jpg 4032w,
+                    images/hebergements/2_large/aw-creative-VGs8z60yT2c-unsplash.jpg  2016w,
+                    images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg 1008w,
+                    images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg   504w
                   "
-                  sizes="(min-width: 1024px) 160px,
+                  sizes="(min-width: 1024px) 130px,
                           (max-width: 1024px) 160px,
-                          (max-width: 768px) 160px,
+                          (max-width: 768px) 130px,
                           (max-width: 576px) 130px,
-                            160px"
+                            130px"
                   src="aw-creative-VGs8z60yT2c-unsplash.jpg"
                   alt="chambre d'hôtel à marseille"
                 />
@@ -380,16 +386,16 @@
               <figure class="popular_hostings_figure">
                 <img
                   srcset="
-                    images/hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg 160w,
-                    images/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg  160w,
-                    images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg 160w,
-                    images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg  160w
+                    images/hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg 4000w,
+                    images/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg  2000w,
+                    images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg 1000w,
+                    images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg   500w
                   "
-                  sizes="(min-width: 1024px) 160px,
+                  sizes="(min-width: 1024px) 130px,
                           (max-width: 1024px) 160px,
-                          (max-width: 768px) 160px,
-                          (max-width: 576px) 160px,
-                            160px"
+                          (max-width: 768px) 130px,
+                          (max-width: 576px) 130px,
+                            130px"
                   src="febrian-zakaria-sjvU0THccQA-unsplash.jpg"
                   alt="chambre d'hôtel à marseille"
                 />
@@ -427,7 +433,7 @@
                 sizes="(min-width: 1024px) 310px,
                           (max-width: 1024px) 160px,
                           (max-width: 768px) 160px,
-                          (max-width: 576px) 130px,
+                          (max-width: 576px) 160px,
                             310px"
                 src="reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                 alt="chambre d'hôtel à marseille"
@@ -517,7 +523,7 @@
                   sizes="(min-width: 1024px) 310px,
                           (max-width: 1024px) 160px,
                           (max-width: 768px) 160px,
-                          (max-width: 576px) 130px,
+                          (max-width: 576px) 320px,
                             310px"
                   src="florian-wehde-xW9e8gdotxI-unsplash.jpg"
                   alt="activité à marseille"
@@ -538,7 +544,7 @@
                   sizes="(min-width: 1024px) 310px,
                           (max-width: 1024px) 160px,
                           (max-width: 768px) 160px,
-                          (max-width: 576px) 330px,
+                          (max-width: 576px) 320px,
                             310px"
                   src="lena-paulin-wH2-EJoDcV0-unsplash.jpg"
                   alt="activité à marseille"
