--- a/index.html
+++ b/index.html
@@ -267,7 +267,9 @@
                 />
                 <figcaption class="main_hostings_figcaption">
                   <h3>Auberge le panier</h3>
-                  <p>Nuit à partir de <strong>23 €</strong></p>
+                  <p div class="popular_hostings_text">
+                    Nuit à partir de <strong>23 €</strong>
+                  </p>
                   <div class="stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -298,7 +300,9 @@
                 />
                 <figcaption class="main_hostings_figcaption">
                   <h3>Hôtel chez Amina</h3>
-                  <p>Nuit à partir de <strong>96 €</strong></p>
+                  <p class="popular_hostings_text">
+                    Nuit à partir de <strong>96 €</strong>
+                  </p>
                   <div class="stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -338,7 +342,10 @@
                 />
 
                 <figcaption class="popular_hostings_figcaption">
-                  <h3>Hôtel le soleil du matin</h3>
+                  <h3>
+                    Hôtel le soleil du <br />
+                    matin
+                  </h3>
                   <p>Nuit à partir de <strong>128 €</strong></p>
                   <div class="stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -369,7 +376,7 @@
                   alt="chambre d'hôtel à marseille"
                 />
                 <figcaption class="popular_hostings_figcaption">
-                  <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                  <h3>Au coeur de l'eau <br />Chambres d'hôtes</h3>
                   <p>Nuit à partir de <strong>71 €</strong></p>
                   <div class="stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -400,7 +407,10 @@
                   alt="chambre d'hôtel à marseille"
                 />
                 <figcaption class="popular_hostings_figcaption">
-                  <h3>Hôtel tout bleu et blanc</h3>
+                  <h3>
+                    Hôtel tout bleu et <br />
+                    blanc
+                  </h3>
                   <p>Nuit à partir de <strong>68 €</strong></p>
                   <div class="stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
