mise à jour du fichier README.md et correction des couleurs du menu responsive

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Reservia est une entreprise qui vous aide à trouver des hébergements et des activités pendant vos vacances"
+      content="Reservia est une entreprise qui vous aide à planifier vos vacances"
     />
     <meta name="author" content="adekambi rachad" />
-    <meta name="robots" content="index, no follow" />
+    <meta name="robots" content="index, follow" />
     <!-- css-->
     <link rel="stylesheet" type="text/css" href="style.css" />
 
@@ -64,7 +64,7 @@
         <div class="filters">
           <h2 class="filters_title">Filtres</h2>
           <div class="filters_items">
-            <a href="#">
+            <a href="">
               <div class="filters_item">
                 <div class="filters_item_icon">
                   <i class="fas fa-money-bill-wave"></i>
@@ -82,7 +82,7 @@
               </div>
             </a>
 
-            <a href="#">
+            <a href="">
               <div class="filters_item">
                 <div class="filters_item_icon">
                   <i class="fas fa-heart"></i>
@@ -91,7 +91,7 @@
               </div>
             </a>
 
-            <a href="#">
+            <a href="">
               <div class="filters_item">
                 <div class="filters_item_icon">
                   <i class="fas fa-dog"></i>
@@ -117,7 +117,7 @@
         <div class="main_hostings">
           <h2>Hébergements à Marseille</h2>
           <div class="main_hostings_figures">
-            <a href="#"
+            <a href=""
               ><figure class="main_hostings_figure">
                 <img
                   srcset="
@@ -150,7 +150,7 @@
               </figure>
             </a>
 
-            <a href="#"
+            <a href=""
               ><figure class="main_hostings_figure">
                 <img
                   srcset="
@@ -183,7 +183,7 @@
               </figure>
             </a>
 
-            <a href="#">
+            <a href="">
               <figure class="main_hostings_figure">
                 <img
                   srcset="
@@ -215,7 +215,7 @@
                 </figcaption></figure
             ></a>
 
-            <a href="#">
+            <a href="">
               <figure class="main_hostings_figure">
                 <img
                   srcset="
@@ -248,7 +248,7 @@
               </figure>
             </a>
 
-            <a href="#">
+            <a href="">
               <figure class="main_hostings_figure">
                 <img
                   srcset="
@@ -281,7 +281,7 @@
               </figure>
             </a>
 
-            <a href="#">
+            <a href="">
               <figure class="main_hostings_figure">
                 <img
                   srcset="
@@ -313,7 +313,7 @@
                 </figcaption></figure
             ></a>
           </div>
-          <a href="#"><h3 class="display_more">Afficher plus</h3> </a>
+          <a href=""><h3 class="display_more">Afficher plus</h3> </a>
         </div>
 
         <!--popular_hostings-->
@@ -323,7 +323,7 @@
             <i class="fas fa-chart-line fa-2x"></i>
           </div>
           <div class="popular_hostings_figures">
-            <a href="#">
+            <a href="">
               <figure class="popular_hostings_figure">
                 <img
                   srcset="
@@ -359,7 +359,7 @@
               </figure>
             </a>
 
-            <a href="#">
+            <a href="">
               <figure class="popular_hostings_figure">
                 <img
                   srcset="
@@ -394,7 +394,7 @@
               </figure>
             </a>
 
-            <a href="#">
+            <a href="">
               <figure class="popular_hostings_figure">
                 <img
                   srcset="
@@ -437,7 +437,7 @@
         <h2 class="activities_title">Activités à Marseille</h2>
         <div class="activities_figures">
           <!--activities_figure-->
-          <a href="#">
+          <a href="">
             <figure class="activities_figure">
               <img
                 srcset="
@@ -460,7 +460,7 @@
 
           <!--activities_figures_cards-->
           <div class="activities_figures_cards">
-            <a href="#">
+            <a href="">
               <figure class="activities_figures_card">
                 <img
                   srcset="
@@ -481,7 +481,7 @@
               </figure>
             </a>
 
-            <a href="#">
+            <a href="">
               <figure class="activities_figures_card">
                 <img
                   srcset="
@@ -504,7 +504,7 @@
           </div>
 
           <!--activities_figure-->
-          <a href="#">
+          <a href="">
             <figure class="activities_figure">
               <img
                 srcset="
@@ -527,7 +527,7 @@
 
           <!--activities_figures_cards-->
           <div class="activities_figures_cards">
-            <a href="#">
+            <a href="">
               <figure class="activities_figures_card">
                 <img
                   srcset="
@@ -548,7 +548,7 @@
               </figure>
             </a>
 
-            <a href="#">
+            <a href="">
               <figure class="activities_figures_card">
                 <img
                   srcset="
