coreection du menu

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       </header>
 
       <!--hostings-->
-      <section class="hostings">
+      <section class="hostings" id="hostings">
         <!--main hostings-->
         <div class="main_hostings">
           <h2>Hébergements à Marseille</h2>
